associate notebooks with fenics kernelspec

--- a/neumann-poisson.ipynb
+++ b/neumann-poisson.ipynb
@@ -148,7 +148,7 @@
    "metadata": {},
    "source": [
     "Since we have natural (Neumann) boundary conditions in this problem, we\n",
-    "don´t have to implement boundary conditions. This is because Neumann\n",
+    "don\u00b4t have to implement boundary conditions. This is because Neumann\n",
     "boundary conditions are default in DOLFIN.\n",
     "\n",
     "To compute the solution we use the bilinear form, the linear forms, and\n",
@@ -193,7 +193,13 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 2 (fenics)",
+   "language": "python",
+   "name": "fenics"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 0
 }
