--- a/stokes-stabilized.ipynb
+++ b/stokes-stabilized.ipynb
@@ -247,7 +247,13 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 2 (fenics)",
+   "language": "python",
+   "name": "fenics"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 0
 }
