--- a/stokes-taylor-hood.ipynb
+++ b/stokes-taylor-hood.ipynb
@@ -73,7 +73,7 @@
     "&lt;dolfin.functions.functionspace.VectorFunctionSpace&gt; of continuous\n",
     "piecewise quadratics and a :pyFunctionSpace\n",
     "&lt;dolfin.cpp.function.FunctionSpace&gt; of continuous piecewise\n",
-    "linears. (This mixed finite element space is known as the Taylor–Hood\n",
+    "linears. (This mixed finite element space is known as the Taylor\u2013Hood\n",
     "elements and is a stable, standard element pair for the Stokes\n",
     "equations.)"
    ]
@@ -304,7 +304,13 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 2 (fenics)",
+   "language": "python",
+   "name": "fenics"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 0
 }
