--- a/subdomains.ipynb
+++ b/subdomains.ipynb
@@ -130,8 +130,8 @@
     "We create a :pyMeshFunction &lt;dolfin.cpp.MeshFunction&gt; to store the\n",
     "numbering of the subdomains. When creating a MeshFunction an argument\n",
     "specifying the type of the MeshFunction must be given. Allowed types are\n",
-    "‘int’, ‘size\\_t’, ‘double’ and ‘bool’. To illustrate the difference of\n",
-    "these we will use both ‘size\\_t’, ‘double’ and ‘bool’:"
+    "\u2018int\u2019, \u2018size\\_t\u2019, \u2018double\u2019 and \u2018bool\u2019. To illustrate the difference of\n",
+    "these we will use both \u2018size\\_t\u2019, \u2018double\u2019 and \u2018bool\u2019:"
    ]
   },
   {
@@ -308,7 +308,13 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 2 (fenics)",
+   "language": "python",
+   "name": "fenics"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 0
 }
