--- a/tensor-weighted-poisson.ipynb
+++ b/tensor-weighted-poisson.ipynb
@@ -541,7 +541,13 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 2 (fenics)",
+   "language": "python",
+   "name": "fenics"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 0
 }
