--- a/demo_eigenvalue.ipynb
+++ b/demo_eigenvalue.ipynb
@@ -77,7 +77,7 @@
    "outputs": [],
    "source": [
     "# Define mesh, function space\n",
-    "mesh = Mesh(\"/box_with_dent.xml.gz\")\n",
+    "mesh = Mesh(\"box_with_dent.xml.gz\")\n",
     "V = FunctionSpace(mesh, \"Lagrange\", 1)\n",
     "\n",
     "# Define basis and bilinear form\n",
