Added support for functions in multiple cells with splitcell, will be done in a better fashion in december. Now demo_maxwell eigenvalues gives warning at startup due to table formatting. Will also be reviewed in December

--- a/demo_eigenvalue.ipynb
+++ b/demo_eigenvalue.ipynb
@@ -49,7 +49,8 @@
    "source": [
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
-    "parameters[\"plotting_backend\"]=\"matplotlib\"    # Test for PETSc and SLEPc\n",
+    "parameters[\"plotting_backend\"]=\"matplotlib\"\n",
+    "# Test for PETSc and SLEPc\n",
     "\n",
     "if not has_linear_algebra_backend(\"PETSc\"):\n",
     "    print(\"DOLFIN has not been configured with PETSc. Exiting.\")\n",
