--- a/demo_maxwell-eigenvalues.ipynb
+++ b/demo_maxwell-eigenvalues.ipynb
@@ -88,7 +88,7 @@
    ]
   },
   {
-   "cell_type": "code",
+"cell_type": "markdown",
    "execution_count": null,
    "metadata": {
     "attributes": {
@@ -120,7 +120,7 @@
    ]
   },
   {
-   "cell_type": "code",
+"cell_type": "markdown",
    "execution_count": null,
    "metadata": {
     "attributes": {
@@ -163,6 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext splitcell\n",
     "from dolfin import *"
    ]
   },
@@ -181,7 +182,8 @@
    "source": [
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
-    "parameters[\"plotting_backend\"]=\"matplotlib\"  import numpy as np\n",
+    "parameters[\"plotting_backend\"]=\"matplotlib\"\n",
+    "import numpy as np\n",
     "if not has_linear_algebra_backend(\"PETSc\"):\n",
     "    print(\"DOLFIN has not been configured with PETSc. Exiting.\")\n",
     "    exit()\n",
@@ -206,6 +208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+"%%split_cell\n",
     "def eigenvalues(V, bcs):"
    ]
   },
@@ -223,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
+"%%split_cell\n",
     "    # Define the bilinear forms on the right- and left-hand sides\n",
     "    u = TrialFunction(V)\n",
     "    v = TestFunction(V)\n",
@@ -253,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
+"%%split_cell\n",
     "    # Assemble into PETSc matrices\n",
     "    dummy = v[0]*dx\n",
     "    A = PETScMatrix()\n",
@@ -277,7 +280,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
+"%%split_cell\n",
     "    [bc.zero(B) for bc in bcs]"
    ]
   },
@@ -300,7 +303,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
+"%%split_cell\n",
     "    solver = SLEPcEigenSolver(A, B)\n",
     "    solver.parameters[\"solver\"] = \"krylov-schur\"\n",
     "    solver.parameters[\"problem_type\"] = \"gen_hermitian\""
@@ -323,7 +326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
+"%%split_cell\n",
     "    solver.parameters[\"spectrum\"] = \"target magnitude\"\n",
     "    solver.parameters[\"spectral_transform\"] = \"shift-and-invert\"\n",
     "    solver.parameters[\"spectral_shift\"] = 5.5\n",
@@ -348,13 +351,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
+"%%split_cell\n",
     "    # Return the computed eigenvalues in a sorted array\n",
     "    computed_eigenvalues = []\n",
     "    for i in range(min(neigs, solver.get_number_converged())):\n",
     "        r, _ = solver.get_eigenvalue(i) # ignore the imaginary part\n",
     "        computed_eigenvalues.append(r)\n",
     "    return np.sort(np.array(computed_eigenvalues))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%run_split_cell"
    ]
   },
   {
@@ -374,6 +388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+"%%split_cell\n",
     "def print_eigenvalues(mesh):"
    ]
   },
@@ -394,7 +409,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
+"%%split_cell\n",
     "    nedelec_V   = FunctionSpace(mesh, \"N1curl\", 1)\n",
     "    nedelec_bcs = [DirichletBC(nedelec_V, Constant((0.0, 0.0)), DomainBoundary())]\n",
     "    nedelec_eig = eigenvalues(nedelec_V, nedelec_bcs)"
@@ -416,7 +431,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
+"%%split_cell\n",
     "    lagrange_V   = VectorFunctionSpace(mesh, \"Lagrange\", 1)\n",
     "    lagrange_bcs = [DirichletBC(lagrange_V.sub(1), 0, \"near(x[0], 0) || near(x[0], pi)\"),\n",
     "                    DirichletBC(lagrange_V.sub(0), 0, \"near(x[1], 0) || near(x[1], pi)\")]\n",
@@ -437,7 +452,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
+"%%split_cell\n",
     "    true_eig = np.sort(np.array([float(m**2 + n**2) for m in range(6) for n in range(6)]))[1:13]"
    ]
   },
@@ -454,11 +469,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
+"%%split_cell\n",
     "    np.set_printoptions(formatter={'float': '{:5.2f}'.format})\n",
     "    print(\"Nedelec:  {}\".format(nedelec_eig))\n",
     "    print(\"Lagrange: {}\".format(lagrange_eig))\n",
     "    print(\"Exact:    {}\".format(true_eig))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%run_split_cell"
    ]
   },
   {
