--- a/demo_poisson.ipynb
+++ b/demo_poisson.ipynb
@@ -30,9 +30,11 @@
     "$\\partial \\Omega = \\Gamma_{D} \\cup \\Gamma_{N}$, the Poisson equation\n",
     "with particular boundary conditions reads:\n",
     "\n",
-    "$$- \\nabla^{2} u &= f \\quad {\\rm in} \\ \\Omega, \\\\\n",
+    "\\begin{align}\n",
+    "- \\nabla^{2} u &= f \\quad {\\rm in} \\ \\Omega, \\\\\n",
     "             u &= 0 \\quad {\\rm on} \\ \\Gamma_{D}, \\\\\n",
-    "             \\nabla u \\cdot n &= g \\quad {\\rm on} \\ \\Gamma_{N}. \\\\$$\n",
+    "             \\nabla u \\cdot n &= g \\quad {\\rm on} \\ \\Gamma_{N}. \n",
+    "\\end{align}\n",
     "\n",
     "Here, $f$ and $g$ are input data and $n$ denotes the outward directed\n",
     "boundary normal. The most standard variational form of Poisson equation\n",
@@ -42,9 +44,11 @@
     "\n",
     "where $V$ is a suitable function space and\n",
     "\n",
-    "$$a(u, v) &= \\int_{\\Omega} \\nabla u \\cdot \\nabla v \\, {\\rm d} x, \\\\\n",
+    "\\begin{align}\n",
+    "a(u, v) &= \\int_{\\Omega} \\nabla u \\cdot \\nabla v \\, {\\rm d} x, \\\\\n",
     "L(v)    &= \\int_{\\Omega} f v \\, {\\rm d} x\n",
-    "+ \\int_{\\Gamma_{N}} g v \\, {\\rm d} s.$$\n",
+    "+ \\int_{\\Gamma_{N}} g v \\, {\\rm d} s.\n",
+    "\\end{align}\n",
     "\n",
     "The expression $a(u, v)$ is the bilinear form and $L(v)$ is the linear\n",
     "form. It is assumed that all functions in $V$ satisfy the Dirichlet\n",
@@ -74,7 +78,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from dolfin import *"
@@ -90,7 +96,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -113,7 +121,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create mesh and define function space\n",
@@ -147,7 +157,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Define Dirichlet boundary (x = 0 or x = 1)\n",
@@ -174,7 +186,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Define boundary condition\n",
@@ -211,7 +225,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Define variational problem\n",
@@ -241,7 +257,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Compute solution\n",
@@ -267,7 +285,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Save solution in VTK format\n",
@@ -280,7 +300,26 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "anaconda-cloud": {},
+  "kernelspec": {
+   "display_name": "Python [default]",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 1
 }
